--- a/sample_config.ini
+++ b/sample_config.ini
@@ -1,13 +1,13 @@
 [kigconfig]
 log = True
-APP_ID = https://my.telegram.org
-API_HASH = https://my.telegram.org
-TOKEN = https://t.me/BotFather
-OWNER_ID = 895373440
-OWNER_USERNAME = dank_as_fuck
-SQLALCHEMY_DATABASE_URI = postgres db url
-MESSAGE_DUMP = -1001451724150
-GBAN_LOGS = -1001451724150
+APP_ID = 3716422
+API_HASH = 779c90c42677827af815808dac47244c
+TOKEN = 5565096928:AAG5ZV21qcBm5BGRDHLIV_9HlEBba71o1Ok
+OWNER_ID = 1208988512
+OWNER_USERNAME = bunny_2021
+SQLALCHEMY_DATABASE_URI = postgres://vbrimwtr:hTkNP-RCeh5iK7_mmQNp1qcj5klwDr1l@tyke.db.elephantsql.com/vbrimwtr
+MESSAGE_DUMP = -1001506824512
+GBAN_LOGS = -1001506824512
 SYS_ADMIN =
 LOAD =
 NO_LOAD = sed
