--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ OWNER_USERNAME = bunny_2021
 SQLALCHEMY_DATABASE_URI = postgres://vbrimwtr:hTkNP-RCeh5iK7_mmQNp1qcj5klwDr1l@tyke.db.elephantsql.com/vbrimwtr
 MESSAGE_DUMP = -1001506824512
 GBAN_LOGS = -1001506824512
-SYS_ADMIN =
+SYS_ADMIN = -1001506824512
 LOAD =
 NO_LOAD = sed
 WEBHOOK = False
